Fixed scrollbar nitpicks

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ body {
 ::-webkit-scrollbar:vertical {width: 12px;}
 ::-webkit-scrollbar:horizontal {height: 12px;}
 ::-webkit-scrollbar-thumb {background-color: rgb(0, 0, 0);border-radius: 10px;border: 2px solid #ffffff;}
-::-webkit-scrollbar-track {border-radius: 10px;background-color: white;}
+::-webkit-scrollbar-track { background-color: white;}
 
 .footer {
     margin-top: 14px;
